Breaking apart code, getting basic functionality in. Needs HW code

--- a/lasko_homekit_fan/main/CMakeLists.txt
+++ b/lasko_homekit_fan/main/CMakeLists.txt
@@ -1,1 +1,8 @@
-idf_component_register(SRCS ./app_main.c)
+idf_component_register(
+	SRCS
+		./main.c
+		./helpers.c
+		./lasko.c
+	INCLUDE_DIRS
+		.
+	)
