Adding source files of first working beta!
Adding initial files for first working beta!

Lots has happened here. This initial version has pretty much everything I
wanted from the outset of the project. This includes: HomeKit support,
support for physical device LEDs/buttons, support for OEM IR remote.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # Build directory for ESP-IDF
 lasko_homekit_fan/build
 lasko_homekit_fan/managed_components
+
+# Sublime project
+*.sublime-*
+
+# VSCode project
+*.vscode*
